# HydraCore

./: .gitignore  CMakeLists.txt  ClearNVidiaCache.bat  CopyCoreFilesInHydraBin2.bat  LICENSE  README.md
.github/workflows/: codacy-analysis.yml
bakeBrdfEnergy/: MSTablesGGX2017.cpp  MSTablesTRGgx.cpp  MSTablesTransp.cpp  MSTablesTranspInside.cpp  MSTablesTransparencyGGX.cpp  MultiScatteringTables.cpp  bakeBrdf.cpp  bakeBrdfEnergy.vcxproj  bakeBrdfEnergy.vcxproj.filters
bvh_builder/: CMakeLists.txt  bvh_access.cpp  bvh_access.h  bvh_access_dll.cpp  bvh_access_dll2.cpp  bvh_access_dll2_utils.cpp  early_split.h
cam_plug/: CamHostPluginAPI.h  HydraDLib.h  HydraDLibUnix.cpp  HydraDLibWin64.cpp  SimpleCamPlugin.cpp
clew/: CMakeLists.txt  clew.c  clew.h  clew.vcxproj  clew.vcxproj.filters
doc/coding_rules/: coding_style.tex
doc/licence/: 01_HydraCore.txt  05_pugixml.txt  07_IESNA.txt  09_glfw_licence.txt
doc/ray_perf/: june_2017_old_vs_new_core.xlsx  june_2017_old_vs_new_core2.xlsx
hydra_app/: CMakeLists.txt  Camera.h  Timer.cpp  Timer.h  input.cpp  input.h  main.cpp  main.h  main_app.sln  main_app.vcxproj  main_app.vcxproj.filters  main_app_console.cpp  main_app_tests.cpp  main_app_window.cpp  mesh_utils.cpp  mesh_utils.h
hydra_app/cmake/Modules/: FindFreeImage.cmake
hydra_app/data/meshes/: teapot.vsgf
hydra_app/data/textures/: test_10.hdr
hydra_app/data/textures_gen/: dummy.txt
hydra_app/tests/014_Bump_height/: statex_00001.xml
hydra_app/tests/014_Bump_height/data/: chunk_00001.image4ub  chunk_00003.vsgf  chunk_00005.vsgf
hydra_app/tests/Benchmark_Scene03/: change_00000.xml  statex_00001.xml
hydra_app/tests/Benchmark_Scene03/data/: chunk_00001.vsgf  chunk_00002.vsgf  chunk_00003.vsgf  chunk_00004.vsgf  chunk_00005.vsgf  chunk_00006.vsgf  chunk_00007.vsgf  chunk_00008.vsgf  chunk_00009.vsgf  chunk_00010.vsgf  chunk_00011.vsgf  chunk_00012.vsgf  chunk_00013.vsgf  chunk_00015.vsgf  chunk_00017.vsgf  chunk_00018.vsgf  chunk_00019.vsgf  chunk_00022.vsgf  chunk_00023.vsgf  chunk_00025.vsgf  chunk_00027.vsgf  chunk_00028.vsgf  chunk_00029.vsgf  chunk_00030.vsgf  chunk_00032.vsgf  chunk_00033.vsgf  chunk_00034.vsgf  chunk_00035.vsgf  chunk_00036.vsgf  chunk_00037.vsgf  chunk_00038.vsgf  chunk_00039.vsgf  chunk_00040.vsgf  chunk_00042.vsgf  chunk_00043.vsgf  chunk_00044.vsgf  chunk_00045.vsgf  chunk_00046.vsgf  chunk_00047.vsgf  chunk_00048.vsgf  (+27 more)
hydra_app/tests/demo_05/: statex_00001.xml
hydra_app/tests/demo_05/data/: chunk_00003.vsgf  chunk_00004.vsgf  chunk_00005.vsgf
hydra_app/tests/demo_06/: statex_00001.xml
hydra_app/tests/demo_06/data/: chunk_00002.vsgf
hydra_app/tests/teapot_cylinder/: statex_00001.xml
hydra_app/tests/test_01/: change_00000.xml  statex_00001.xml
hydra_app/tests/test_01/data/: chunk_00001.vsgf  chunk_00002.vsgf  chunk_00003.vsgf  chunk_00004.vsgf  chunk_00005.vsgf  chunk_00006.vsgf
hydra_app/tests/test_223_small/: change_00000.xml  statex_00001.xml
hydra_app/tests/test_223_small/data/: chunk_00004.vsgf  chunk_00008.vsgf
hydra_app/tests/test_224/: change_00000.xml  statex_00001.xml
hydra_app/tests/test_224/data/: chunk_00000.image4ub  chunk_00002.image4ub  chunk_00004.vsgf  chunk_00006.vsgf  chunk_00008.vsgf
hydra_app/tests/test_224_gloss/: change_00000.xml  statex_00001.xml
hydra_app/tests/test_224_gloss/data/: chunk_00003.vsgf
hydra_app/tests/test_224_sphere/: change_00000.xml  statex_00001.xml
hydra_app/tests/test_224_sphere/data/: chunk_00005.vsgf  chunk_00007.vsgf  chunk_00009.vsgf
hydra_app/tests/test_224_sphere_microfacet/: statex_00001.xml
hydra_app/tests/test_42/: change_00000.xml  statex_00000.xml  statex_00001.xml
hydra_app/tests/test_42_beckmann/: statex_00001.xml
hydra_app/tests/test_42_beckmann/data/: chunk_00001.image4ub  chunk_00006.vsgf  chunk_00007.vsgf  chunk_00008.vsgf
hydra_app/tests/test_42_ggx/: statex_00001.xml
hydra_app/tests/test_42_ggx/data/: chunk_00004.vsgf  chunk_00005.vsgf
hydra_app/tests/test_42_with_mirror/: statex_00001.xml
hydra_app/tests/test_42_with_mirror/data/: chunk_00001.vsgf  chunk_00002.vsgf  chunk_00003.vsgf  chunk_00004.vsgf
hydra_app/tests/test_aniso/: statex_00001.xml
hydra_app/tests/test_aniso/data/: chunk_00001.vsgf  chunk_00003.vsgf  chunk_00004.vsgf  chunk_00005.vsgf
hydra_app/tests/test_aniso2/: change_00000.xml  statex_00001.xml
hydra_app/tests/test_aniso2/data/: chunk_00001.vsgf  chunk_00002.vsgf  proctex_00001.c  proctex_00002.c
hydra_app/tests/test_pool/: change_00000.xml  statex_00001.xml
hydra_app/tests/test_pool/data/: chunk_00001.vsgf  chunk_00003.vsgf  chunk_00004.vsgf  chunk_00005.vsgf
hydra_drv/: AbstractMaterial.h  BVHBuilderLoaderWin.cpp  Bitmap.cpp  CMakeLists.txt  CPUBilateralFilter2D.cpp  CPUExpLayer.cpp  CPUExp_GBuffer.cpp  CPUExp_IntegratorSSS.cpp  CPUExp_Integrator_PT_Trofimm.cpp  CPUExp_Integrators.h  CPUExp_Integrators_Common.cpp  CPUExp_Integrators_LT.cpp  CPUExp_Integrators_MISPT.cpp  CPUExp_Integrators_MISPT.h  CPUExp_Integrators_MLT.cpp  CPUExp_Integrators_MMLT.cpp  CPUExp_Integrators_MMLTDebug.cpp  CPUExp_Integrators_PT.cpp  CPUExp_Integrators_PT_Loop.cpp  CPUExp_Integrators_PT_QMC.cpp  CPUExp_Integrators_SBDPT.cpp  CPUExp_Integrators_ThreeWay.cpp  CPUExp_Integrators_ThreeWayBlendMMLT.cpp  CPUExp_Integrators_TwoWay.cpp  CPUExp_bxdf.h  FastList.h  GPUOCLData.cpp  GPUOCLKernels.cpp  GPUOCLLayer.cpp  GPUOCLLayer.h  GPUOCLLayerAdvanced.cpp  GPUOCLLayerCore.cpp  GPUOCLLayerMLT.cpp  GPUOCLLayerOther.cpp  GPUOCLTests.cpp  HDRImageLite.h  IBVHBuilderAPI.h  IESRender.cpp  IHWLayer.h  IHWLayerDataAssembler.cpp  (+32 more)
hydra_drv/shaders/: image.cl  light.cl  material.cl  mlt.cl  screen.cl  sort.cl  texproc.cl  trace.cl
ies_parser/: CMakeLists.txt  IESNA.C  IESNA.H  IES_READ.C  ies_parser.vcxproj  ies_parser.vcxproj.filters
papers/07_paper_wscg/: wscg-template.tex  wscg.sty
shaderpack/: CMakeLists.txt  pack.cpp  shaderpack.vcxproj  shaderpack.vcxproj.filters
vsgl3/: CMakeLists.txt  Timer.cpp  Timer.h  clHelper.cpp  clHelper.h  vsgl3.vcxproj  vsgl3.vcxproj.filters
